http-load-balancing-with-ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
  labels:
    name: host-ingress
spec:
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alpaca
            port: 
              number: 8080
