http-load-balancing-with-ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  labels:
    name: tls-ingress
spec:
  tls: 
    - hosts:
      - alpaca.example.com
      secretName: tls-secret-name
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alpaca
            port: 
              number: 8080
